// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs item matches snapshot 1`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Item
    className=""
    href="#"
    onClick={[Function]}
    style={Object {}}
>
    Item
</Item>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": "Item",
      "className": "",
      "href": "#",
      "onClick": [Function],
      "style": Object {},
    },
    "ref": null,
    "rendered": Object {
      "instance": <li
        class="nhsuk-breadcrumb__item "
>
        <a
                class="nhsuk-breadcrumb__link"
                href="#"
        >
                Item
        </a>
</li>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <a
          className="nhsuk-breadcrumb__link"
          href="#"
          onClick={[Function]}
>
          Item
</a>,
        "className": "nhsuk-breadcrumb__item ",
        "style": Object {},
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": <a
            class="nhsuk-breadcrumb__link"
            href="#"
>
            Item
</a>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Item",
            "className": "nhsuk-breadcrumb__link",
            "href": "#",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            "Item",
          ],
          "type": "a",
        },
      ],
      "type": "li",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": "Item",
        "className": "",
        "href": "#",
        "onClick": [Function],
        "style": Object {},
      },
      "ref": null,
      "rendered": Object {
        "instance": <li
          class="nhsuk-breadcrumb__item "
>
          <a
                    class="nhsuk-breadcrumb__link"
                    href="#"
          >
                    Item
          </a>
</li>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <a
            className="nhsuk-breadcrumb__link"
            href="#"
            onClick={[Function]}
>
            Item
</a>,
          "className": "nhsuk-breadcrumb__item ",
          "style": Object {},
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <a
              class="nhsuk-breadcrumb__link"
              href="#"
>
              Item
</a>,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Item",
              "className": "nhsuk-breadcrumb__link",
              "href": "#",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Array [
              "Item",
            ],
            "type": "a",
          },
        ],
        "type": "li",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Breadcrumbs matches snapshot 1`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Breadcrumbs
    ariaLabel="Breadcrumbs"
    className=""
    style={Object {}}
>
    <Item
        className=""
        href="#"
        onClick={[Function]}
        style={Object {}}
    >
        Test
    </Item>
</Breadcrumbs>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "ariaLabel": "Breadcrumbs",
      "children": <Item
        className=""
        href="#"
        onClick={[Function]}
        style={Object {}}
>
        Test
</Item>,
      "className": "",
      "style": Object {},
    },
    "ref": null,
    "rendered": Object {
      "instance": <nav
        class="nhsuk-breadcrumb "
        aria-label="Breadcrumbs"
>
        <div
                class="nhsuk-width-container"
        >
                <ol
                        class="nhsuk-breadcrumb__list"
                >
                        <li
                                class="nhsuk-breadcrumb__item "
                        >
                                <a
                                        class="nhsuk-breadcrumb__link"
                                        href="#"
                                >
                                        Test
                                </a>
                        </li>
                </ol>
        </div>
</nav>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-label": "Breadcrumbs",
        "children": <div
          className="nhsuk-width-container"
>
          <ol
                    className="nhsuk-breadcrumb__list"
          >
                    <Item
                              className=""
                              href="#"
                              onClick={[Function]}
                              style={Object {}}
                    >
                              Test
                    </Item>
          </ol>
</div>,
        "className": "nhsuk-breadcrumb ",
        "style": Object {},
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": <div
            class="nhsuk-width-container"
>
            <ol
                        class="nhsuk-breadcrumb__list"
            >
                        <li
                                    class="nhsuk-breadcrumb__item "
                        >
                                    <a
                                                class="nhsuk-breadcrumb__link"
                                                href="#"
                                    >
                                                Test
                                    </a>
                        </li>
            </ol>
</div>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ol
              className="nhsuk-breadcrumb__list"
>
              <Item
                            className=""
                            href="#"
                            onClick={[Function]}
                            style={Object {}}
              >
                            Test
              </Item>
</ol>,
            "className": "nhsuk-width-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": <ol
                class="nhsuk-breadcrumb__list"
>
                <li
                                class="nhsuk-breadcrumb__item "
                >
                                <a
                                                class="nhsuk-breadcrumb__link"
                                                href="#"
                                >
                                                Test
                                </a>
                </li>
</ol>,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Item
                  className=""
                  href="#"
                  onClick={[Function]}
                  style={Object {}}
>
                  Test
</Item>,
                "className": "nhsuk-breadcrumb__list",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Test",
                    "className": "",
                    "href": "#",
                    "onClick": [Function],
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": <li
                      class="nhsuk-breadcrumb__item "
>
                      <a
                                            class="nhsuk-breadcrumb__link"
                                            href="#"
                      >
                                            Test
                      </a>
</li>,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <a
                        className="nhsuk-breadcrumb__link"
                        href="#"
                        onClick={[Function]}
>
                        Test
</a>,
                      "className": "nhsuk-breadcrumb__item ",
                      "style": Object {},
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": <a
                          class="nhsuk-breadcrumb__link"
                          href="#"
>
                          Test
</a>,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Test",
                          "className": "nhsuk-breadcrumb__link",
                          "href": "#",
                          "onClick": [Function],
                        },
                        "ref": null,
                        "rendered": Array [
                          "Test",
                        ],
                        "type": "a",
                      },
                    ],
                    "type": "li",
                  },
                  "type": [Function],
                },
              ],
              "type": "ol",
            },
          ],
          "type": "div",
        },
      ],
      "type": "nav",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "ariaLabel": "Breadcrumbs",
        "children": <Item
          className=""
          href="#"
          onClick={[Function]}
          style={Object {}}
>
          Test
</Item>,
        "className": "",
        "style": Object {},
      },
      "ref": null,
      "rendered": Object {
        "instance": <nav
          class="nhsuk-breadcrumb "
          aria-label="Breadcrumbs"
>
          <div
                    class="nhsuk-width-container"
          >
                    <ol
                              class="nhsuk-breadcrumb__list"
                    >
                              <li
                                        class="nhsuk-breadcrumb__item "
                              >
                                        <a
                                                  class="nhsuk-breadcrumb__link"
                                                  href="#"
                                        >
                                                  Test
                                        </a>
                              </li>
                    </ol>
          </div>
</nav>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "aria-label": "Breadcrumbs",
          "children": <div
            className="nhsuk-width-container"
>
            <ol
                        className="nhsuk-breadcrumb__list"
            >
                        <Item
                                    className=""
                                    href="#"
                                    onClick={[Function]}
                                    style={Object {}}
                        >
                                    Test
                        </Item>
            </ol>
</div>,
          "className": "nhsuk-breadcrumb ",
          "style": Object {},
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <div
              class="nhsuk-width-container"
>
              <ol
                            class="nhsuk-breadcrumb__list"
              >
                            <li
                                          class="nhsuk-breadcrumb__item "
                            >
                                          <a
                                                        class="nhsuk-breadcrumb__link"
                                                        href="#"
                                          >
                                                        Test
                                          </a>
                            </li>
              </ol>
</div>,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ol
                className="nhsuk-breadcrumb__list"
>
                <Item
                                className=""
                                href="#"
                                onClick={[Function]}
                                style={Object {}}
                >
                                Test
                </Item>
</ol>,
              "className": "nhsuk-width-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": <ol
                  class="nhsuk-breadcrumb__list"
>
                  <li
                                    class="nhsuk-breadcrumb__item "
                  >
                                    <a
                                                      class="nhsuk-breadcrumb__link"
                                                      href="#"
                                    >
                                                      Test
                                    </a>
                  </li>
</ol>,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Item
                    className=""
                    href="#"
                    onClick={[Function]}
                    style={Object {}}
>
                    Test
</Item>,
                  "className": "nhsuk-breadcrumb__list",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "Test",
                      "className": "",
                      "href": "#",
                      "onClick": [Function],
                      "style": Object {},
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": <li
                        class="nhsuk-breadcrumb__item "
>
                        <a
                                                class="nhsuk-breadcrumb__link"
                                                href="#"
                        >
                                                Test
                        </a>
</li>,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <a
                          className="nhsuk-breadcrumb__link"
                          href="#"
                          onClick={[Function]}
>
                          Test
</a>,
                        "className": "nhsuk-breadcrumb__item ",
                        "style": Object {},
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": <a
                            class="nhsuk-breadcrumb__link"
                            href="#"
>
                            Test
</a>,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "Test",
                            "className": "nhsuk-breadcrumb__link",
                            "href": "#",
                            "onClick": [Function],
                          },
                          "ref": null,
                          "rendered": Array [
                            "Test",
                          ],
                          "type": "a",
                        },
                      ],
                      "type": "li",
                    },
                    "type": [Function],
                  },
                ],
                "type": "ol",
              },
            ],
            "type": "div",
          },
        ],
        "type": "nav",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
